@@ -20,7 +20,6 @@ package org.apache.solr.prometheus.scraper;
 import io.prometheus.client.Collector;
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
@@ -65,7 +64,7 @@ public class SolrStandaloneScraperTest extends RestTestBase {
         Helpers.loadConfiguration("conf/prometheus-solr-exporter-scraper-test-config.xml");
 
     solrClient = getHttpSolrClient(restTestHarness.getAdminURL());
-    solrScraper = new SolrStandaloneScraper(solrClient, executor);
+    solrScraper = new SolrStandaloneScraper(solrClient, executor, "test");
 
     NoOpResponseParser responseParser = new NoOpResponseParser();
     responseParser.setWriterType("json");
@@ -113,10 +112,9 @@ public class SolrStandaloneScraperTest extends RestTestBase {
     assertEquals("solr_ping", samples.name);
     assertEquals(1, samples.samples.size());
     assertEquals(1.0, samples.samples.get(0).value, 0.001);
-    assertEquals(Collections.singletonList("base_url"), samples.samples.get(0).labelNames);
+    assertEquals(List.of("base_url", "cluster_id"), samples.samples.get(0).labelNames);
     assertEquals(
-        Collections.singletonList(restTestHarness.getAdminURL()),
-        samples.samples.get(0).labelValues);
+        List.of(restTestHarness.getAdminURL(), "test"), samples.samples.get(0).labelValues);
   }
 
   @Test
@@ -139,8 +137,10 @@ public class SolrStandaloneScraperTest extends RestTestBase {
 
     assertEquals(1, replicaSamples.size());
 
-    assertEquals(1, replicaSamples.size());
     assertEquals("solr_metrics_jvm_buffers", replicaSamples.get(0).name);
+
+    assertEquals("cluster_id", replicaSamples.get(0).samples.get(0).labelNames.get(2));
+    assertEquals("test", replicaSamples.get(0).samples.get(0).labelValues.get(2));
   }
 
   @Test
